color contrast issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: rgb(108, 169, 210);
+    --primary-color: rgb(148, 187, 212);
     --secondary-color: #e9d571;
     --accent1-color: #5c1414;
     --accent2-color: #e7a20e; 
